# lab6-oop24-TokarIvan141

./: CMakeLists.txt  main.cpp
Task1/: Base1NV.cpp  Base1NV.h  Base1V.cpp  Base1V.h  Base2NV.cpp  Base2NV.h  Base2V.cpp  Base2V.h  Derived1NV.cpp  Derived1NV.h  Derived1V.cpp  Derived1V.h  Derived2NV.cpp  Derived2NV.h  Derived2V.cpp  Derived2V.h  Derived3NV.cpp  Derived3NV.h  Derived3V.cpp  Derived3V.h
Task2/: Figure.h  Parallelepiped.cpp  Parallelepiped.h  Sphere.cpp  Sphere.h  Tetrahedron.cpp  Tetrahedron.h
Task3/: Bay.cpp  Bay.h  Gulf.cpp  Gulf.h  Sea.cpp  Sea.h  WaterBody.h
